# Data-Structures-Algorithms

./: README.md
Homework1/: CMakeLists.txt  README.md
Homework1/.github/workflows/: classroom.yml
Homework1/include/: Node.h  XorLinkedList.h  XorLinkedList.tpp
Homework1/test/: tests.cpp
Homework2/: CMakeLists.txt  README.md
Homework2/.github/workflows/: classroom.yml
Homework2/include/: Node.h  Process.h  ProcessQueue.h  RoundRobinScheduler.h
Homework2/src/: ProcessQueue.cpp  RoundRobinScheduler.cpp  main.cpp
Homework2/test/: tests.cpp
Homework3/: .gitignore  CMakeLists.txt  README.md
Homework3/.github/workflows/: classroom.yml
Homework3/include/: Entry.h  FileUtils.h  Operations.h
Homework3/src/: FileUtils.cpp  Operations.cpp  main.cpp
Homework3/test/: tests.cpp
Homework4/: .gitignore  CMakeLists.txt  README.md
Homework4/.github/workflows/: classroom.yml
Homework4/include/: BinarySearchTree.h  Entry.h  FileUtils.h  Node.h
Homework4/src/: BinarySearchTree.cpp  FileUtils.cpp  main.cpp
Homework4/test/: tests.cpp
Homework5/: CMakeLists.txt  README.md
Homework5/.github/workflows/: classroom.yml
Homework5/include/: Debug.h  SearchEngine.h  SearchNode.h  SearchResult.h  SiteData.h
Homework5/src/: SearchEngine.cpp  main.cpp
Homework5/test/: tests.cpp
include/: XorLinkedList.tpp
